<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gocut_purchase_Privacy">隐私协议</string>
    <string name="gocut_purchase_alert_subtitle">超过91.98%的用户选择免费试用。解锁以下所有功能</string>
    <string name="gocut_purchase_all_features">PRO用户畅享所有功能</string>
    <string name="gocut_purchase_all_features_purchased">您可享受所有功能</string>
    <string name="gocut_purchase_cancel_anytime">随时取消</string>
    <string name="gocut_purchase_close">关闭</string>
    <string name="gocut_purchase_continue">继续</string>
    <string name="gocut_purchase_custom_background">自定义背景</string>
    <string name="gocut_purchase_effects">特效</string>
    <string name="gocut_purchase_enjoy_features">享受所有功能和素材</string>
    <string name="gocut_purchase_filter">滤镜</string>
    <string name="gocut_purchase_font">字体</string>
    <string name="gocut_purchase_free_trial">3天免费试用</string>
    <string name="gocut_purchase_hd">高清导出</string>
    <string name="gocut_purchase_make_videos">制作精彩视频</string>
    <string name="gocut_purchase_monthly_title">按周：$6.99/周</string>
    <string name="gocut_purchase_more">敬请期待</string>
    <string name="gocut_purchase_now">立即订阅</string>
    <string name="gocut_purchase_popular">最受欢迎</string>
    <string name="gocut_purchase_quite">真的要退出免费试用吗?</string>
    <string name="gocut_purchase_remove_watermark">去水印</string>
    <string name="gocut_purchase_restore">恢复订阅</string>
    <string name="gocut_purchase_sticker">贴纸</string>
    <string name="gocut_purchase_subscribe_desc">确认购买后，您的iTunes账户将被收取费用。订阅将会自动续订，除非在当前订阅结束前至少24小时关闭自动续订。您的帐户将在当前订阅结束前的最后24小时内收取续订费用。您可以在购买后前往Apple ID账户设置中管理和关闭自动续订。</string>
    <string name="gocut_purchase_subscribe_policy">订阅政策</string>
    <string name="gocut_purchase_terms">用户条款</string>
    <string name="gocut_purchase_transition">转场</string>
    <string name="gocut_purchase_yearly_buy">订阅</string>
    <string name="gocut_purchase_yearly_buy_config">免费试用</string>
    <string name="gocut_purchase_yearly_title">按年：$39.99/年</string>
    <string name="gocut_purchase_yearly_title_normal">然后$39.99/年，自动续期</string>
    <string name="mn_app_cancel">取消</string>
    <string name="mn_app_confirm">确认</string>
    <string name="mn_app_contact_us">联系我们</string>
    <string name="mn_app_done">完成</string>
    <string name="mn_app_home_title">开始制作</string>
    <string name="mn_app_import">导入</string>
    <string name="mn_app_mode_camera">视频录制</string>
    <string name="mn_app_mode_editor">视频剪辑</string>
    <string name="mn_app_mode_template">卡点视频</string>
    <string name="mn_app_privacy_title">隐私协议</string>
    <string name="mn_app_setting">设置</string>
    <string name="mn_app_splash_slogan">轻松剪辑 自在表达</string>
    <string name="mn_app_user_terms">用户协议</string>
    <string name="mn_cam_func_add_bgm">添加音乐</string>
    <string name="mn_cam_func_camera_id_switch">切换</string>
    <string name="mn_cam_func_exposure">曝光补偿</string>
    <string name="mn_cam_func_face_beauty">美颜</string>
    <string name="mn_cam_func_flash">补光</string>
    <string name="mn_cam_func_zoom">焦距</string>
    <string name="mn_edit_action">动作</string>
    <string name="mn_edit_adjust_temperature">色温</string>
    <string name="mn_edit_adjust_contrast">对比度</string>
    <string name="mn_edit_adjust_fade">褪色</string>
    <string name="mn_edit_adjust_highlight">高光</string>
    <string name="mn_edit_adjust_hue">色相</string>
    <string name="mn_edit_adjust_brightness">亮度</string>
    <string name="mn_edit_adjust_noise">颗粒</string>
    <string name="mn_edit_adjust_saturation">饱和度</string>
    <string name="mn_edit_adjust_shadow">阴影</string>
    <string name="mn_edit_adjust_sharpness">锐度</string>
    <string name="mn_edit_adjust_vignette">暗角</string>
    <string name="mn_edit_alpha_change">不透明度</string>
    <string name="mn_edit_audio_direct">音乐提取</string>
    <string name="mn_edit_back_home">回首页</string>
    <string name="mn_edit_background_blur">模糊</string>
    <string name="mn_edit_background_color">纯色</string>
    <string name="mn_edit_background_custom">自定义</string>
    <string name="mn_edit_background_gradual">渐变</string>
    <string name="mn_edit_bgm_edit">修改</string>
    <string name="mn_edit_border">边框</string>
    <string name="mn_edit_bubble">气泡</string>
    <string name="mn_edit_butterfly">玩法</string>
    <string name="mn_edit_camcorder">时光掠影</string>
    <string name="mn_edit_change_style">修改样式</string>
    <string name="mn_edit_change_zoom">缩放</string>
    <string name="mn_edit_check_more">查看全部</string>
    <string name="mn_edit_chroma_accuracy">精度</string>
    <string name="mn_edit_cinema">复古胶片</string>
    <string name="mn_edit_clip_img_anim">图片动画</string>
    <string name="mn_edit_clip_img_duration">图片时长</string>
    <string name="mn_edit_clip_transform_fit_in">适合</string>
    <string name="mn_edit_clip_transform_fit_out">填充</string>
    <string name="mn_edit_collage_motion">画面拼贴</string>
    <string name="mn_edit_collage_top">置顶</string>
    <string name="mn_edit_penetrate_human">穿透人体</string>
    <string name="mn_edit_common_cancel">取消</string>
    <string name="mn_edit_common_yes">是的</string>
    <string name="mn_edit_create_video">创建视频</string>
    <string name="mn_edit_dubbing_music_downmountain">下山</string>
    <string name="mn_edit_duplicate_title">复制</string>
    <string name="mn_edit_edit_video">创建视频</string>
    <string name="mn_edit_effect_position">位置</string>
    <string name="mn_edit_player_scale">播放器缩放</string>
    <string name="mn_edit_exit_confirm_content">退出？</string>
    <string name="mn_edit_export_bitrate">比特率</string>
    <string name="mn_edit_export_failed">导出失败</string>
    <string name="mn_edit_export_format">格式</string>
    <string name="mn_edit_export_fps">Fps</string>
    <string name="mn_edit_export_h265">H265 优先</string>
    <string name="mn_edit_export_hardware">硬件</string>
    <string name="mn_edit_export_resolution">选择分辨率</string>
    <string name="mn_edit_export_soft_hard">软硬件</string>
    <string name="mn_edit_export_software">软件</string>
    <string name="mn_edit_exporting">导出中...</string>
    <string name="mn_edit_firework">烟花</string>
    <string name="mn_edit_font">字体</string>
    <string name="mn_edit_foodie">美食</string>
    <string name="mn_edit_guide_angle">左右滑动滚轮调节方向</string>
    <string name="mn_edit_guide_location">点击下方微调位置</string>
    <string name="mn_edit_kaleidoscope">万花筒</string>
    <string name="mn_edit_keyframe_animator_title">关键帧动画</string>
    <string name="mn_edit_kids">亲子</string>
    <string name="mn_edit_leak">漏光</string>
    <string name="mn_edit_love">爱情</string>
    <string name="mn_edit_mask_invert">反选</string>
    <string name="mn_edit_mask_linear">线性</string>
    <string name="mn_edit_mask_mirror">镜像</string>
    <string name="mn_edit_mask_radial">径向</string>
    <string name="mn_edit_mask_rectangle">矩形</string>
    <string name="mn_edit_mosaic_degree">程度</string>
    <string name="mn_edit_music_fade_in_turn_off">缓入关闭</string>
    <string name="mn_edit_music_fade_in_turn_on">缓入开启</string>
    <string name="mn_edit_music_fade_out_turn_off">缓出关闭</string>
    <string name="mn_edit_music_fade_out_turn_on">缓出开启</string>
    <string name="mn_edit_music_repeat_turn_off">循环关闭</string>
    <string name="mn_edit_music_repeat_turn_on">循环开启</string>
    <string name="mn_edit_my_projects">我的项目</string>
    <string name="mn_edit_none">无</string>
    <string name="mn_edit_party">派对</string>
    <string name="mn_edit_plastic">光影</string>
    <string name="mn_edit_project">项目</string>
    <string name="mn_edit_qrcode_scan">二维码</string>
    <string name="mn_edit_quit_confirm_title">是否确认退出编辑？退出后将不保存编辑。</string>
    <string name="mn_edit_reset">重置</string>
    <string name="mn_edit_reset_text">重置</string>
    <string name="mn_edit_roman">浪漫</string>
    <string name="mn_edit_sns">朋友圈</string>
    <string name="mn_edit_special">生日祝福</string>
    <string name="mn_edit_split">分屏</string>
    <string name="mn_edit_split_progress_title">分割点</string>
    <string name="mn_edit_split_splitpoint">分割点</string>
    <string name="mn_edit_subeffect_off">关闭</string>
    <string name="mn_edit_subeffect_on">打开</string>
    <string name="mn_edit_subtitle_align">对齐</string>
    <string name="mn_edit_subtitle_anim_state_off">动画关闭</string>
    <string name="mn_edit_subtitle_anim_state_on">动画开启</string>
    <string name="mn_edit_subtitle_blod_off">粗体关闭</string>
    <string name="mn_edit_subtitle_blod_on">粗体开启</string>
    <string name="mn_edit_subtitle_font">字体</string>
    <string name="mn_edit_subtitle_input">编辑</string>
    <string name="mn_edit_subtitle_anim">字幕动画</string>
    <string name="mn_edit_subtitle_anim_in">入场</string>
    <string name="mn_edit_subtitle_anim_out">出场</string>
    <string name="mn_edit_subtitle_anim_loop">循环</string>
    <string name="mn_edit_subtitle_anim_in_title">入场动画</string>
    <string name="mn_edit_subtitle_anim_out_title">出场动画</string>
    <string name="mn_edit_subtitle_anim_loop_title">循环动画</string>
    <string name="mn_edit_subtitle_anim_duration">动画时长</string>
    <string name="mn_edit_subtitle_italic_off">斜体关闭</string>
    <string name="mn_edit_subtitle_italic_on">斜体开启</string>
    <string name="mn_edit_subtitle_shadow">阴影</string>
    <string name="mn_edit_subtitle_stroke">描边</string>
    <string name="mn_edit_template_center">素材中心</string>
    <string name="mn_edit_tips_cannot_operate">操作失败</string>
    <string name="mn_edit_tips_error_params">参数错误</string>
    <string name="mn_edit_tips_error_template">素材出错</string>
    <string name="mn_edit_tips_export_cancel">导出取消</string>
    <string name="mn_edit_tips_input_text">请输入文字</string>
    <string name="mn_edit_tips_no_allow_del_last">最后一个镜头不允许删除</string>
    <string name="mn_edit_tips_no_allow_set_last_trans">最后一个镜头设置转场无效</string>
    <string name="mn_edit_tips_no_allow_trim">请设置合理范围</string>
    <string name="mn_edit_tips_no_define">未定义</string>
    <string name="mn_edit_tips_no_support">不支持的操作</string>
    <string name="mn_edit_tips_template_qrcode_error">请选择正确的素材!</string>
    <string name="mn_edit_tips_template_theme_error">卡点视频主题错误</string>
    <string name="mn_edit_title_adjust">参数调节</string>
    <string name="mn_edit_title_adjust_curve">曲线调色</string>
    <string name="mn_edit_title_axle_anchor">锚点</string>
    <string name="mn_edit_title_axle_x">X轴</string>
    <string name="mn_edit_title_axle_y">Y轴</string>
    <string name="mn_edit_title_axle_z">Z轴</string>
    <string name="mn_edit_title_background">背景</string>
    <string name="mn_edit_title_bgm">背景音乐</string>
    <string name="mn_edit_title_bgm_dot">踩点</string>
    <string name="mn_edit_title_bgm_repeat">循环</string>
    <string name="mn_edit_title_change_voice">变声</string>
    <string name="mn_edit_title_chroma">抠像</string>
    <string name="mn_edit_title_clip_smear">涂抹</string>
    <string name="mn_edit_title_effect_save2xml">保存xml</string>
    <string name="mn_edit_effect_save2xml_success">保存xml成功</string>
    <string name="mn_edit_title_effect_add_xml">添加xml</string>
    <string name="mn_edit_title_clip_smear_body_no_fount">未识别到人体</string>
    <string name="mn_edit_title_collage_motion_mirror_close">镜像 已关闭</string>
    <string name="mn_edit_title_collage_motion_mirror_open">镜像 已开启</string>
    <string name="mn_edit_title_collage_motion_tile_close">关闭拼贴</string>
    <string name="mn_edit_title_collage_motion_tile_open">开启拼贴</string>
    <string name="mn_edit_title_collage_overlay">混合模式</string>
    <string name="mn_edit_title_collages">画中画</string>
    <string name="mn_edit_title_crop">裁剪</string>
    <string name="mn_edit_title_curve_speed">曲线变速</string>
    <string name="mn_edit_title_delete">删除</string>
    <string name="mn_edit_title_dub_record">录音</string>
    <string name="mn_edit_title_dubbing">音效</string>
    <string name="mn_edit_title_edit">编辑</string>
    <string name="mn_edit_title_end">结束</string>
    <string name="mn_edit_title_export">导出</string>
    <string name="mn_edit_title_filter">滤镜</string>
    <string name="mn_edit_title_flip">翻转</string>
</resources>