<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#101112"
    android:orientation="vertical"
    >

  <View
      android:id="@+id/viewBg"
      android:layout_width="0dp"
      android:layout_height="239dp"
      android:background="#101112"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


  <include
      layout="@layout/view_edit_dialog_bottom"
      android:id="@+id/layout_bottom"
      android:layout_width="0dp"
      android:layout_height="46dp"
      app:layout_constraintBottom_toBottomOf="@+id/viewBg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="193dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/layout_bottom"
      >

  <Button
      android:id="@+id/btn_axle_z"
      android:layout_width="64dp"
      android:layout_height="80dp"
      android:drawablePadding="4dp"
      android:gravity="center"
      android:text="@string/mn_edit_title_axle_z"
      android:textColor="@color/white"
      android:textSize="10sp"
      android:layout_margin="10dp"
      android:background="@drawable/edit_item_bg_normal"
      app:layout_constraintEnd_toStartOf="@+id/btn_axle_x"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"  />

  <Button
      android:id="@+id/btn_axle_x"
      android:layout_width="64dp"
      android:layout_height="80dp"
      android:layout_margin="10dp"
      android:drawablePadding="4dp"
      android:gravity="center"
      android:text="@string/mn_edit_title_axle_x"
      android:textColor="@color/white"
      android:textSize="10sp"
      android:background="@drawable/edit_item_bg_normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintEnd_toStartOf="@+id/btn_axle_y"
      app:layout_constraintStart_toEndOf="@+id/btn_axle_z" />

  <Button
      android:id="@+id/btn_axle_y"
      android:layout_width="64dp"
      android:layout_height="80dp"
      android:layout_margin="10dp"
      android:drawablePadding="4dp"
      android:gravity="center"
      android:text="@string/mn_edit_title_axle_y"
      android:textColor="@color/white"
      android:textSize="10sp"
      android:background="@drawable/edit_item_bg_normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/btn_axle_anchor"
      app:layout_constraintStart_toEndOf="@+id/btn_axle_x" />

  <Button
      android:id="@+id/btn_axle_anchor"
      android:layout_width="64dp"
      android:layout_height="80dp"
      android:layout_margin="10dp"
      android:drawablePadding="4dp"
      android:gravity="center"
      android:text="@string/mn_edit_title_axle_anchor"
      android:textColor="@color/white"
      android:textSize="10sp"
      android:background="@drawable/edit_item_bg_normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toEndOf="@+id/btn_axle_y" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>